--- a/0_titulo.tex
+++ b/0_titulo.tex
@@ -27,7 +27,7 @@ Master's Degree in Data Science \
 
 \textbf{\Large Dermatological lesion prediction}
 
-\textbf{\large Classify dermoscopic among nine different diagnostic categories}
+\textbf{\large Skin disease dermatoscopic classification using convolutional networks on unbalanced dataset}
 
 \vspace{2.5cm}
 \baselineskip 1em
