--- a/Dermatological-lesion-classification.bib
+++ b/Dermatological-lesion-classification.bib
@@ -1,4 +1,119 @@
 
+@online{noauthor_resnet101_nodate,
+	title = {resnet101 — Torchvision main documentation},
+	url = {https://pytorch.org/vision/main/models/generated/torchvision.models.resnet101.html},
+	urldate = {2024-01-02},
+	keywords = {Conclusion, {TFM}},
+}
+
+@online{noauthor_resnet101_nodate-1,
+	title = {resnet101 — Torchvision main documentation},
+	url = {https://pytorch.org/vision/main/models/generated/torchvision.models.resnet101.html},
+	urldate = {2024-01-02},
+}
+
+@misc{simonyan_very_2015,
+	title = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+	url = {http://arxiv.org/abs/1409.1556},
+	abstract = {In this work we investigate the effect of the convolutional network depth on its accuracy in the large-scale image recognition setting. Our main contribution is a thorough evaluation of networks of increasing depth using an architecture with very small (3x3) convolution filters, which shows that a significant improvement on the prior-art configurations can be achieved by pushing the depth to 16-19 weight layers. These findings were the basis of our {ImageNet} Challenge 2014 submission, where our team secured the first and the second places in the localisation and classification tracks respectively. We also show that our representations generalise well to other datasets, where they achieve state-of-the-art results. We have made our two best-performing {ConvNet} models publicly available to facilitate further research on the use of deep visual representations in computer vision.},
+	number = {{arXiv}:1409.1556},
+	publisher = {{arXiv}},
+	author = {Simonyan, Karen and Zisserman, Andrew},
+	urldate = {2024-01-02},
+	date = {2015-04-10},
+	eprinttype = {arxiv},
+	eprint = {1409.1556 [cs]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Conclusion, {TFM}},
+}
+
+@online{noauthor_papers_nodate,
+	title = {Papers with Code - Vision Transformer Explained},
+	url = {https://paperswithcode.com/method/vision-transformer},
+	abstract = {The Vision Transformer, or {ViT}, is a model for image classification that employs a Transformer-like architecture over patches of the image.  An image is split into fixed-size patches, each of them are then linearly embedded, position embeddings are added, and the resulting sequence of vectors is fed to a standard Transformer encoder. In order to perform classification, the standard approach of adding an extra learnable “classification token” to the sequence is used.},
+	urldate = {2024-01-02},
+	langid = {english},
+	keywords = {{TFM}, conclusion},
+}
+
+@online{belharar_enhancing_2023,
+	title = {Enhancing Classification Accuracy for Imbalanced Image Data Using {SMOTE}},
+	url = {https://medium.com/@fatimazahra.belharar/enhancing-classification-accuracy-for-imbalanced-image-data-using-smote-41737783a720},
+	abstract = {In the world of data analysis and machine learning, not all datasets are created equal. One common challenge that often arises is dealing…},
+	titleaddon = {Medium},
+	author = {Belharar, Fatimazahra},
+	urldate = {2023-12-27},
+	date = {2023-06-07},
+	langid = {english},
+	keywords = {Building, {TFM}},
+}
+
+@online{maklin_synthetic_2022,
+	title = {Synthetic Minority Over-sampling {TEchnique} ({SMOTE})},
+	url = {https://medium.com/@corymaklin/synthetic-minority-over-sampling-technique-smote-7d419696b88c},
+	abstract = {Synthetic Minority Over-sampling {TEchnique}, or {SMOTE} for short, is a preprocessing technique used to address a class imbalance in a…},
+	titleaddon = {Medium},
+	author = {Maklin, Cory},
+	urldate = {2023-12-27},
+	date = {2022-05-14},
+	langid = {english},
+	keywords = {{TFM} building},
+}
+
+@online{noauthor_smote_nodate,
+	title = {{SMOTE} — Version 0.11.0},
+	url = {https://imbalanced-learn.org/stable/references/generated/imblearn.over_sampling.SMOTE.html#},
+	urldate = {2023-12-27},
+	keywords = {Building, {TFM}},
+}
+
+@misc{he_deep_2015,
+	title = {Deep Residual Learning for Image Recognition},
+	url = {http://arxiv.org/abs/1512.03385},
+	doi = {10.48550/arXiv.1512.03385},
+	abstract = {Deeper neural networks are more difficult to train. We present a residual learning framework to ease the training of networks that are substantially deeper than those used previously. We explicitly reformulate the layers as learning residual functions with reference to the layer inputs, instead of learning unreferenced functions. We provide comprehensive empirical evidence showing that these residual networks are easier to optimize, and can gain accuracy from considerably increased depth. On the {ImageNet} dataset we evaluate residual nets with a depth of up to 152 layers---8x deeper than {VGG} nets but still having lower complexity. An ensemble of these residual nets achieves 3.57\% error on the {ImageNet} test set. This result won the 1st place on the {ILSVRC} 2015 classification task. We also present analysis on {CIFAR}-10 with 100 and 1000 layers. The depth of representations is of central importance for many visual recognition tasks. Solely due to our extremely deep representations, we obtain a 28\% relative improvement on the {COCO} object detection dataset. Deep residual nets are foundations of our submissions to {ILSVRC} \& {COCO} 2015 competitions, where we also won the 1st places on the tasks of {ImageNet} detection, {ImageNet} localization, {COCO} detection, and {COCO} segmentation.},
+	number = {{arXiv}:1512.03385},
+	publisher = {{arXiv}},
+	author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	urldate = {2023-12-26},
+	date = {2015-12-10},
+	eprinttype = {arxiv},
+	eprint = {1512.03385 [cs]},
+	keywords = {Building, Computer Science - Computer Vision and Pattern Recognition, {TFM}},
+}
+
+@misc{tan_efficientnet_2020,
+	title = {{EfficientNet}: Rethinking Model Scaling for Convolutional Neural Networks},
+	url = {http://arxiv.org/abs/1905.11946},
+	doi = {10.48550/arXiv.1905.11946},
+	shorttitle = {{EfficientNet}},
+	abstract = {Convolutional Neural Networks ({ConvNets}) are commonly developed at a fixed resource budget, and then scaled up for better accuracy if more resources are available. In this paper, we systematically study model scaling and identify that carefully balancing network depth, width, and resolution can lead to better performance. Based on this observation, we propose a new scaling method that uniformly scales all dimensions of depth/width/resolution using a simple yet highly effective compound coefficient. We demonstrate the effectiveness of this method on scaling up {MobileNets} and {ResNet}. To go even further, we use neural architecture search to design a new baseline network and scale it up to obtain a family of models, called {EfficientNets}, which achieve much better accuracy and efficiency than previous {ConvNets}. In particular, our {EfficientNet}-B7 achieves state-of-the-art 84.3\% top-1 accuracy on {ImageNet}, while being 8.4x smaller and 6.1x faster on inference than the best existing {ConvNet}. Our {EfficientNets} also transfer well and achieve state-of-the-art accuracy on {CIFAR}-100 (91.7\%), Flowers (98.8\%), and 3 other transfer learning datasets, with an order of magnitude fewer parameters. Source code is at https://github.com/tensorflow/tpu/tree/master/models/official/efficientnet.},
+	number = {{arXiv}:1905.11946},
+	publisher = {{arXiv}},
+	author = {Tan, Mingxing},
+	urldate = {2023-12-24},
+	date = {2020-09-11},
+	eprinttype = {arxiv},
+	eprint = {1905.11946 [cs, stat]},
+	note = {version: 5},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning, Statistics - Machine Learning, {TFM}, building},
+}
+
+@misc{tan_efficientnet_2020-1,
+	title = {{EfficientNet}: Rethinking Model Scaling for Convolutional Neural Networks},
+	url = {http://arxiv.org/abs/1905.11946},
+	doi = {10.48550/arXiv.1905.11946},
+	shorttitle = {{EfficientNet}},
+	abstract = {Convolutional Neural Networks ({ConvNets}) are commonly developed at a fixed resource budget, and then scaled up for better accuracy if more resources are available. In this paper, we systematically study model scaling and identify that carefully balancing network depth, width, and resolution can lead to better performance. Based on this observation, we propose a new scaling method that uniformly scales all dimensions of depth/width/resolution using a simple yet highly effective compound coefficient. We demonstrate the effectiveness of this method on scaling up {MobileNets} and {ResNet}. To go even further, we use neural architecture search to design a new baseline network and scale it up to obtain a family of models, called {EfficientNets}, which achieve much better accuracy and efficiency than previous {ConvNets}. In particular, our {EfficientNet}-B7 achieves state-of-the-art 84.3\% top-1 accuracy on {ImageNet}, while being 8.4x smaller and 6.1x faster on inference than the best existing {ConvNet}. Our {EfficientNets} also transfer well and achieve state-of-the-art accuracy on {CIFAR}-100 (91.7\%), Flowers (98.8\%), and 3 other transfer learning datasets, with an order of magnitude fewer parameters. Source code is at https://github.com/tensorflow/tpu/tree/master/models/official/efficientnet.},
+	number = {{arXiv}:1905.11946},
+	publisher = {{arXiv}},
+	author = {Tan, Mingxing and Le, Quoc V.},
+	urldate = {2023-12-24},
+	date = {2020-09-11},
+	eprinttype = {arxiv},
+	eprint = {1905.11946 [cs, stat]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning, Statistics - Machine Learning},
+}
+
 @article{shorten_survey_2019,
 	title = {A survey on Image Data Augmentation for Deep Learning},
 	volume = {6},
@@ -845,7 +960,7 @@ Issue: 1-2},
 	langid = {english},
 }
 
-@report{tan_efficientnet_2020,
+@report{tan_efficientnet_2020-2,
 	title = {{EfficientNet}: Rethinking Model Scaling for Convolutional Neural Networks},
 	url = {http://arxiv.org/abs/1905.11946},
 	shorttitle = {{EfficientNet}},
