--- a/1_introduccion.tex
+++ b/1_introduccion.tex
@@ -3,8 +3,9 @@
 
 %%% SECTION
 
-Skin diseases such as skin cancer,  affect a large number of people around the world. Many of them are associated with a social stigma because the lesions look impressive causing rejection towards people having them.  Others, such as melanoma, are also associated with a high mortality rate, which is gradually decreasing thanks to advances in its early detection. Premature diagnosis, especially when the disease is in its first stages, will help to improve its prognosis and evolution. As a contribution to improving skin disease detection, this work has used convolutional neural networks to classify eight different types of skin disease. 
-The dataset used for this study is part of the 2019 International Skin Imaging Collaboration (ISIC). The previously mentioned association launches annual challenges to stimulate researchers in the detection and classification of skin diseases. In concrete, the data used in this paper relates to the eight specific skin diseases shown in figure \ref{fig: skin_lesions_sample}. The series of data have been obtained using dermoscopic techniques and they have been provided by different hospital contributions. The dermoscopic is widely used by dermatologists due that it improves the diagnosis of lesions compared with the naked eye.
+Skin diseases, such as skin cancer,  affect a large number of people around the world. Many of them are associated with a social stigma because the lesions look impressive, causing rejection towards people having them.  Others, such as melanoma, are also associated with a high mortality rate, which is gradually decreasing thanks to advances in its early detection. Premature diagnosis, especially when the disease is in its first stages, will help to improve its prognosis and evolution. As a contribution to improving skin disease detection, this work has used convolutional neural networks to classify eight different types of skin disease. 
+
+The dataset used for this study is part of the 2019 International Skin Imaging Collaboration (ISIC). The previously mentioned association launches annual challenges to stimulate researchers in detecting and classifying skin diseases. In concrete, the data used in this paper relates to the eight specific skin diseases shown in figure \ref{fig: skin_lesions_sample}. The data series has been provided by different hospital contributions and has been obtained using dermoscopic techniques, which are widely used by dermatologists because they improve the diagnosis of lesions compared with the naked eye. 
 
 
 \begin{figure}[ht]
@@ -15,20 +16,34 @@ The dataset used for this study is part of the 2019 International Skin Imaging C
     \end{center}
 \end{figure}
 
+The different diseases collected within the data set are: 
+
+\begin{itemize}
+    \item Melanoma (MEL)
+    \item Melanocytic nevus (NV)
+    \item Basal cell carcinoma (BCC)
+    \item Actinic keratosis (AK)
+    \item Benign keratosis (BKL)
+    \item Dermatofibroma (DF)
+    \item Vascular lesion (VASC)
+    \item Squamous cell carcinoma (SCC)
+\end{itemize}
+
+Throughout this work, both the name and the abbreviation in brackets will be used interchangeably.
 
 \section{Motivation}
 
 %%%%%%%%%%%%%%%%%%%
 %%% Motivation %%%
 %%%%%%%%%%%%%%%%%%%
-This journey towards the elaboration of this exciting work on dermoscopic classification of skin disease is a path that combines science, technology and medical care uniquely. 
+This journey towards the elaboration of this exciting work on dermoscopic classification of skin disease is a path that combines science, technology, and medical care uniquely. 
 
 Artificial Intelligence (AI) is bringing about a fourth industrial revolution that is already affecting our society. In concrete, its incorporation into medicine has a very significant impact on different medical areas (\cite{luciaclemares_que_2023} y \cite{apd_aplicaciones_IA_Medicina}) such as:
 
 \begin{itemize}
-    \item \textbf{A more accurate and organized diagnosis}: The use of advanced search techniques on large medical data sets allows for more accurate and reliable diagnostics. 
+    \item \textbf{A more accurate and organized diagnosis}: Advanced search techniques on large medical data sets allow for more accurate and reliable diagnostics. 
     \item \textbf{Faster and more efficient drug development}: Accelerating the research and development of new drugs.
-    \item \textbf{Personalised care}: AI can customize treatment plans for each patient's individual needs optimizing, at the same time, effectiveness and minimizing side effects.
+    \item \textbf{Personalised care}: AI can customize treatment plans for each patient's individual needs, optimizing, at the same time, effectiveness and minimizing side effects.
     \item \textbf{Images diagnostic more accurate and faster}. The worldwide name of AI will be recognized henceforth in this work as Deep networks. A part of these networks is specialized image recognition. They have a pattern detection capability that is by far superior to any human being. They can also make a diagnosis with very little delay. For the aforementioned reasons, it will be an essential tool for improving patient care and treatment. 
 \end{itemize}
 
@@ -44,15 +59,12 @@ It also represents an opportunity to imagine that my work could be helpful, one 
 %%% Goals %%%
 %%%%%%%%%%%%%%%%%%%
 
-This project's main objective is the classification of dermoscopic images in order to identify nine types of skin lesions. To achieve this a Convolutional Neural Network (CNN) will be created. This challenge can be separated into two goals.
+This project's main objective is the classification of dermoscopic images in order to identify eight types of skin lesions. A Convolutional Neural Network (CNN) will be created to achieve this. This challenge can be separated into two goals.
 
 \begin{itemize}
-    \item On the one hand, to analyse the current \textbf{state of the art} in automatic medical detection by imaging.
-    \item Secondly, to \textbf{classify these lesions into one of nine classes} to be studied.
+    \item On the one hand, to analyze the current \textbf{state of the art} in automatic medical detection by imaging.
+    \item Secondly, to \textbf{classify these lesions into one of eight classes} to be studied.
 \end{itemize}
-
-In parallel, the dataset contains a metadata file. This information can help to segment the source information according to the types of dermoscopic techniques used. Therefore, this provides us with a \textbf{secondary objective} by allowing us to make a reliability ranking according to the technique used. 
-
 
 \section{Methodology}
 
